# rig-trading-kit-by-askj

./: Cargo.toml  README.md  install.sh
examples/agents/: autonomous_agent.rs  chat_agent.rs  perp_trading_agent_random.rs  perp_trading_agent_trailing_stop.rs
examples/askj/: .env  agent_profile.rs  assign_delegator.rs  assign_vault.rs  backtest.rs  delete_agent.rs  deploy.rs  last_trade.rs  list_agent.rs  monitor_agent.rs  predefined_placeholder.rs  update_agent.rs
examples/askj/jsonprofile/: sol_rsi_1.json
examples/drift_rs/: drift_deposit.rs
src/: agent.rs  lib.rs
src/askj/: README.md  auth.rs  mod.rs  monitor.rs  request.rs  schema.rs  simulate.rs  vault.rs
src/data/: markets.rs  mod.rs
src/tools/: drift.rs  mod.rs  order.rs  shared.rs  user.rs  vault.rs
